feature_language_translation: stings replaced with reference strings

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_change_phone_before_verify.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_change_phone_before_verify.xml
@@ -68,7 +68,7 @@
                     android:layout_marginTop="50px"
                     android:background="#0000"
                     android:gravity="center_vertical"
-                    android:hint="Enter New Phone Number"
+                    android:hint="@string/enter_new_phone_no"
                     android:inputType="phone"
                     android:paddingLeft="20px"
                     android:paddingRight="20px"
