--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_forgot_password.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_forgot_password.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="82px"
             android:layout_centerVertical="true"
-            android:text="Back"
+            android:text="@string/back"
             android:background="@drawable/transparent"
             android:textColor="@drawable/blue_alpha_color_selector"
             android:textSize="@dimen/button_text_size"
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="FORGOT PASSWORD"
+            android:text="@string/forgot_password_cap"
             android:textColor="@color/blue_btn"
             android:textSize="@dimen/button_text_size" />
     </RelativeLayout>
