--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_frame.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_frame.xml
@@ -225,7 +225,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="27px"
                 android:background="@drawable/blue_btn_selector"
-                android:text="Arrived"
+                android:text="@string/arrived"
                 android:textColor="@drawable/white_color_selector"
                 android:textSize="@dimen/button_text_size"
                 android:visibility="gone"
