--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_request_duplicate_registration.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_request_duplicate_registration.xml
@@ -107,7 +107,7 @@
                             android:textColor="@color/black_text"
                             android:textSize="28px"
                             android:layout_marginLeft="40px"
-                            android:text="Email:"/>
+                            android:text="@string/email"/>
 
                         <TextView
                             android:id="@+id/textViewRegisterEmailValue"
