--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -75,7 +75,7 @@
                 android:layout_width="288px"
                 android:layout_height="96px"
                 android:background="@drawable/grey_btn_selector"
-                android:text="LOGIN"
+                android:text="@string/login"
                 android:textColor="@drawable/white_color_selector"
                 android:textSize="@dimen/button_text_size"/>
 
