--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_missed_rides.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_missed_rides.xml
@@ -40,7 +40,7 @@
             android:id="@+id/textViewMissedRideCustomerName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Customer name: "
+            android:text="@string/customer_name"
             android:textColor="@color/bg_grey_opaque"
             android:textSize="36px"
             android:layout_marginLeft="20px"
@@ -118,7 +118,7 @@
             android:id="@+id/textViewMissedRideCustomerDistance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Away from you: "
+            android:text="@string/away_from_you"
             android:textColor="@color/bg_grey_opaque"
             android:textSize="36px"
             android:layout_marginLeft="20px"
