--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_history.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_history.xml
@@ -201,7 +201,7 @@
                     android:layout_toRightOf="@+id/imageViewVertical"
                     android:gravity="center"
                     android:singleLine="true"
-                    android:text="Account"
+                    android:text="@string/account"
                     android:textColor="@color/bg_grey_opaque"
                     android:textSize="20px"/>
 
