--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_leaderboard.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_leaderboard.xml
@@ -108,7 +108,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Daily"
+            android:text="@string/daily"
             android:textColor="@drawable/text_color_bg_grey_selector"
             android:textSize="30px"
             android:background="@drawable/background_white_white_dark_selector"
