--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_register.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_register.xml
@@ -19,7 +19,7 @@
             android:layout_height="82px"
             android:layout_centerVertical="true"
             android:background="@drawable/transparent"
-            android:text="Back"
+            android:text="@string/back"
             android:textColor="@drawable/blue_alpha_color_selector"
             android:textSize="@dimen/button_text_size"/>
 
