--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_share.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_share.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="Invite &amp; Earn"
+            android:text="@string/invite_earn"
             android:textColor="@color/white"
             android:textSize="48px"/>
     </RelativeLayout>
