--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_login.xml
@@ -19,7 +19,7 @@
             android:layout_height="82px"
             android:layout_centerVertical="true"
             android:background="@drawable/transparent"
-            android:text="Back"
+            android:text="@string/back"
             android:textColor="@drawable/blue_alpha_color_selector"
             android:textSize="@dimen/button_text_size"/>
 
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="LOGIN"
+            android:text="@string/login"
             android:textColor="@color/blue_btn"
             android:textSize="@dimen/button_text_size"/>
     </RelativeLayout>
@@ -89,7 +89,7 @@
             android:layout_height="99px"
             android:layout_marginTop="40px"
             android:background="@drawable/blue_btn_selector"
-            android:text="LOGIN"
+            android:text="@string/login"
             android:textColor="@drawable/white_color_selector"
             android:textSize="@dimen/button_text_size"/>
 
