--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_customer_app.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_customer_app.xml
@@ -66,7 +66,7 @@
                     android:layout_centerHorizontal="true"
                     android:background="@drawable/blue_btn_selector"
                     android:singleLine="true"
-                    android:text="Go to Play Store"
+                    android:text="@string/go_to_playstore"
                     android:textColor="@drawable/white_color_selector"
                     android:textSize="@dimen/button_text_size" />
             </RelativeLayout>
