--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_share_enter_number.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_share_enter_number.xml
@@ -83,7 +83,7 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/grey_btn_br_selector"
                     android:singleLine="true"
-                    android:text="Cancel"
+                    android:text="@string/cancel"
                     android:textColor="@drawable/white_color_selector"
                     android:textSize="34px" />
 
