--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_jugnoo_share.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_jugnoo_share.xml
@@ -211,7 +211,7 @@
                     android:layout_toRightOf="@+id/imageViewVertical"
                     android:gravity="center"
                     android:singleLine="true"
-                    android:text="Account"
+                    android:text="@string/account"
                     android:textColor="@color/bg_grey_opaque"
                     android:textSize="20px"/>
 
@@ -248,7 +248,7 @@
             android:layout_marginTop="15px"
             android:gravity="center"
             android:singleLine="true"
-            android:text="Completed"
+            android:text="@string/completed"
             android:textColor="@color/bg_grey_opaque"
             android:textSize="28px"/>
 
