feature_language_translation: stings replaced with reference strings complete

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_add_customer_cash.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_add_customer_cash.xml
@@ -91,7 +91,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="40px"
             android:background="@drawable/red_btn_selector"
-            android:text="NO CASH"
+            android:text="@string/no_cash"
             android:textColor="@drawable/white_color_selector"
             android:textSize="@dimen/button_text_size"
             android:visibility="gone"
