--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_forgot_password.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_forgot_password.xml
@@ -65,7 +65,7 @@
                 android:id="@+id/forgotPasswordHelpText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Please provide your email address to get instructions for reseting your password."
+            android:text="@string/enter_email_to_have_instruction"
             android:textColor="@color/white"
             android:textSize="36px" 
             android:layout_margin="35px"
