--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_jugnoo_share_payments.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_jugnoo_share_payments.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="Sharing Rides"
+            android:text="@string/sharing_rides"
             android:textColor="@color/white"
             android:textSize="48px"/>
 
