--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_help_particular.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_help_particular.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="Title"
+            android:text="@string/title"
             android:textColor="@color/white"
             android:textSize="48px" />
     </RelativeLayout>
