--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -665,7 +665,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="center"
                                     android:singleLine="true"
-                                    android:text="Min Fare"
+                                    android:text="@string/min_fare"
                                     android:textColor="@color/black"
                                     android:textSize="26px"
                                     android:textStyle="bold" />
@@ -1143,7 +1143,7 @@
                                         android:gravity="center"
                                         android:paddingLeft="40px"
                                         android:paddingRight="40px"
-                                        android:text="Please take the fare as shown above from the customer."
+                                        android:text="@string/take_fare_from_customer"
                                         android:textColor="@color/black"
                                         android:textSize="40px"/>
                                 </LinearLayout>
@@ -1187,7 +1187,7 @@
                                             android:layout_marginRight="20px"
                                             android:layout_marginTop="40px"
                                             android:gravity="center"
-                                            android:text="of upto Rs. 100/-"
+                                            android:text="@string/of_upto_100"
                                             android:textColor="@color/black"
                                             android:textSize="32px"
                                             android:visibility="visible"/>
@@ -1207,7 +1207,7 @@
                                             android:layout_height="wrap_content"
                                             android:layout_gravity="center_horizontal"
                                             android:gravity="center"
-                                            android:text="Pay"
+                                            android:text="@string/pay"
                                             android:textColor="@color/black"
                                             android:textSize="46px"/>
 
@@ -1452,7 +1452,7 @@
                                     android:layout_centerVertical="true"
                                     android:textSize="40px"
                                     android:textColor="@color/black"
-                                    android:text="NO LUGGAGE"
+                                    android:text="@string/no_lugage"
                                     android:gravity="center"
                                     />
 
@@ -1911,7 +1911,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="42px"
-                        android:text="Meals ON"
+                        android:text="@string/meals_on"
                         android:textColor="@color/white"
                         android:textSize="34px"/>
 
@@ -1979,7 +1979,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="42px"
-                        android:text="Sharing ON"
+                        android:text="@string/sharing_on"
                         android:textColor="@color/white"
                         android:textSize="34px"/>
 
@@ -2055,7 +2055,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="42px"
-                        android:text="Sharing Rides"
+                        android:text="@string/sharing_rides"
                         android:textColor="@color/white"
                         android:textSize="34px"/>
 
@@ -2104,7 +2104,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="42px"
-                        android:text="Super Drivers"
+                        android:text="@string/super_driver"
                         android:textColor="@color/white"
                         android:textSize="34px"/>
 
