--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_share.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_share.xml
@@ -68,7 +68,7 @@
                 android:layout_marginRight="20px"
                 android:gravity="center"
                 android:singleLine="true"
-                android:text="Your Referral Code is"
+                android:text="@string/your_referral_code"
                 android:textColor="@color/white"
                 android:textSize="36px"
                 />
