--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -85,7 +85,7 @@
                 android:layout_height="96px"
                 android:layout_marginLeft="57px"
                 android:background="@drawable/blue_btn_selector"
-                android:text="REGISTER"
+                android:text="@string/register"
                 android:textColor="@drawable/white_color_selector"
                 android:textSize="@dimen/button_text_size"
                 android:visibility="gone"
