--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_one_button.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_one_button.xml
@@ -34,7 +34,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_alignParentTop="true"
                 android:gravity="center"
-                android:text="Title"
+                android:text="@string/title"
                 android:textColor="@color/blue_btn"
                 android:textSize="50px" 
                 android:paddingLeft="20px"
@@ -52,7 +52,7 @@
                 android:maxHeight="800px"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
-                android:text="Message"
+                android:text="@string/message"
                 android:layout_marginTop="20px"
                 android:textColor="@color/black"
                 android:lineSpacingExtra="10px"
