--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_share_enter_number.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_share_enter_number.xml
@@ -94,7 +94,7 @@
                     android:layout_alignParentRight="true"
                     android:background="@drawable/blue_btn_bl_selector"
                     android:singleLine="true"
-                    android:text="OK"
+                    android:text="@string/ok"
                     android:textColor="@drawable/white_color_selector"
                     android:textSize="34px" />
 
