--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_jugnoo_share.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_jugnoo_share.xml
@@ -180,7 +180,7 @@
                     android:layout_below="@+id/textViewCustomerPaid"
                     android:gravity="center"
                     android:singleLine="true"
-                    android:text="Paid in Cash"
+                    android:text="@string/paid_cash"
                     android:textColor="@color/bg_grey_opaque"
                     android:textSize="20px"/>
 
@@ -235,7 +235,7 @@
             android:layout_height="50px"
             android:layout_centerInParent="true"
             android:background="@drawable/button_blue"
-            android:text="OK"
+            android:text="@string/ok"
             android:textColor="@drawable/white_color_selector"
             android:textSize="@dimen/button_text_size"/>
 
