--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_history.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_history.xml
@@ -72,7 +72,7 @@
                 android:layout_marginLeft="15px"
                 android:layout_marginTop="8px"
                 android:singleLine="true"
-                android:text="Status"
+                android:text="@string/status"
                 android:textColor="@color/bg_grey_opaque"
                 android:textSize="30px"/>
 
@@ -170,7 +170,7 @@
                     android:gravity="center"
                     android:singleLine="true"
                     android:layout_below="@+id/textViewCustomerPaid"
-                    android:text="Paid in Cash"
+                    android:text="@string/paid_cash"
                     android:textColor="@color/bg_grey_opaque"
                     android:textSize="20px"/>
 
