--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request.xml
@@ -102,6 +102,7 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="30px"
                 android:layout_below="@+id/textViewOtherRequestDetails"
+                android:splitMotionEvents="false"
                 >
                 <Button
                     android:id="@+id/buttonAcceptRide"
