feature_driver_profile_screen: profile screen activty added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -1784,6 +1784,12 @@
                 android:orientation="vertical"
                 android:splitMotionEvents="false">
 
+                <LinearLayout
+                    android:id="@+id/driverImageRL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
                 <RelativeLayout
                     android:id="@+id/profileRl"
                     android:layout_width="220px"
@@ -1812,10 +1818,9 @@
                     android:id="@+id/userName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/profileRl"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="10px"
-                    android:gravity="center"
+                    android:layout_marginTop="15px"
+                    android:layout_marginLeft="80px"
                     android:text="Dr"
                     android:textColor="@color/white"
                     android:textSize="34px"/>
@@ -1825,7 +1830,8 @@
                     android:id="@+id/linearLayoutDEI"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20px"
+                    android:layout_marginTop="10px"
+                    android:layout_marginLeft="10px"
                     android:orientation="horizontal"
                     >
 
@@ -1836,12 +1842,6 @@
                         android:orientation="vertical"
                         >
 
-                        <ImageView
-                            android:layout_width="53px"
-                            android:layout_height="53px"
-                            android:src="@drawable/ic_dei"
-                            android:tag="mwar"
-                            />
 
                         <TextView
                             android:id="@+id/textViewDEI"
@@ -1849,12 +1849,14 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10px"
                             android:gravity="center"
-                            android:text="4.5"
+                            android:text="View Account"
                             android:textColor="@color/white"
-                            android:textSize="38px"/>
+                            android:textSize="32px"/>
 
                     </LinearLayout>
                 </LinearLayout>
+                </LinearLayout>
+
 
                 <RelativeLayout
                     android:id="@+id/relativeLayoutAutosOn"
@@ -1864,6 +1866,10 @@
                     android:background="@drawable/transparent"
                     android:splitMotionEvents="false"
                     >
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="3px"
+                        android:background="@drawable/menu_divider"/>
 
                     <ImageView
                         android:layout_width="match_parent"
